Enabled AssessedClaimDetailsTest test.