@@ -2,6 +2,7 @@ package uk.gov.justice.laa.amend.claim.models;
 
 import lombok.Builder;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Builder
@@ -9,6 +10,7 @@ public record ClaimInsert(
     String id,
     String submissionId,
     String uniqueFileNumber,
+    String feeCode,
     String userId
 ) implements Insert {
 
@@ -19,10 +21,11 @@ public record ClaimInsert(
 
     @Override
     public List<Object> parameters() {
-        return List.of(
+        return Arrays.asList(
             id,
             submissionId,
             uniqueFileNumber,
+            feeCode,
             userId,
             userId
         );
