@@ -2,6 +2,7 @@ package uk.gov.justice.laa.amend.claim.models;
 
 import lombok.Builder;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Builder
@@ -18,7 +19,7 @@ public record ClaimSummaryFeeInsert(
 
     @Override
     public List<Object> parameters() {
-        return List.of(
+        return Arrays.asList(
             id,
             claimId,
             userId
